<resources>
    <string name="app_name">Red Social</string>
    <string name="log_in">Ingresar</string>
    <string name="log_out">Desconectar</string>
    <string name="register">Regístrate</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="keep_session">Mantener sesión</string>
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="github_user">Usuario Github</string>
    <string name="sex_m">Hombre</string>
    <string name="sex_w">Mujer</string>
    <string name="accept">Aceptar</string>
    <string name="clear">Borrar</string>
    <string name="title_activity_home">HomeActivity</string>
<<<<<<< HEAD
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
=======
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="action_settings">Configuración</string>
    <string name="repositories">Repositorios:&#032;</string>
    <string name="addPost">Post</string>
>>>>>>> develop
</resources>
