<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_input"
        android:layout_marginRight="@dimen/text_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_input"
        android:layout_marginRight="@dimen/text_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_input"
        android:layout_marginRight="@dimen/text_input"
        app:passwordToggleContentDescription="@string/password"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
             android:id="@+id/etRegisterPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/text_input"
        android:layout_marginRight="@dimen/text_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etGithubUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/github_user" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioBtnMan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_m" />

                <RadioButton
                    android:id="@+id/radioBtnWoman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sex_w" />
        </RadioGroup>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/text_input"
        android:layout_marginLeft="@dimen/text_input"
        android:layout_marginTop="@dimen/checkbox_top">

        <Button
            android:id="@+id/registerAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="2dp"
            android:text="@string/accept" />

        <Button
            android:id="@+id/registerClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="2dp"
            android:text="@string/clear" />
    </LinearLayout>


</LinearLayout>